# encoder-profiler

./: CMakeLists.txt  Readme.md
include/: profiler_data.h  resource_poller.h  timer.h
src/: main.cpp  profiler_dadat.cpp  resource_poller.cpp
